[tool.poetry]
name = "netwark"
version = "1.0.0"
description = ""
authors = ["Michael Vieira <contact+dev[âT]mvieira[d¤T]fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
pyramid = "^1.10"
pypugjs = "^5.7"
alembic = "^1.0"
psycopg2-binary = "^2.7"
SQLAlchemy = "^1.2"
pyramid_tm = "^2.2"
transaction = "^2.4"
pyramid_retry = "^1.0"
celery = "^4.2"
"zope.sqlalchemy" = "^1.1"
geoip2 = "^2.9"
idna = "^2.8"
cornice = "^3.5"
colander = "^1.7"
pyyaml = "^5.1"
pasteScript = "^3.1"
waitress = "^1.2"
plaster_pastedeploy = "^0.6.0"
pyramid_mako = "^1.0"

[tool.poetry.dev-dependencies]
pyramid_debugtoolbar = "^4.5"
pycodestyle = "^2.5"
pytest = "^4.3"
pytest-cov = "^2.6"
WebTest = "^2.0"
sphinx-rtd-theme = "^0.4.3"
sphinx = "^1.8"
cornice_swagger = "^0.7.0"
sphinxcontrib-openapi = "^0.4.0"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
